--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "webpack": "^5.88.1"
     },
     "dependencies": {
+        "@lottiefiles/lottie-player": "^2.0.2",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.0",
         "bootstrap-icons": "^1.10.5",
